--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,10 @@ body {
     scroll-behavior: smooth;
 }
 
+section {
+    overflow: hidden;
+}
+
 a {
     color: inherit;
     text-decoration: none;
